# nhp_capacity_conversion_logic

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
.github/: linting.yaml
.github/workflows/: linting.yaml
data/reference/: default_assumptions.csv
src/nhp/capacity_conversion/: aae.py  utils.py
tests/unit/: test_aae.py  test_utils.py
